# Atlas-Fusion

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/atlas_fusion/: CMakeLists.txt  README.md  config.yaml  package.xml
src/atlas_fusion/include/: ConfigService.h  Context.h  DataCache.h  FunctionalityFlags.h  LogService.h  MapBuilder.h  MapBuilderMacros.h  RustStyle.h  Timer.h
src/atlas_fusion/include/algorithms/: DepthMap.h  DetectionsProcessor.h  EnvironmentalModel.h  ImuDataProcessor.h  Kalman1D.h  Kalman3D.h  LidarFilter.h  Projector.h  SelfModel.h  SimpleTrajectoryLogger.h  tools.h
src/atlas_fusion/include/data_loader/: AbstractDataLoader.h  CameraDataLoader.h  DataLoader.h  DataLoaderIdentifiers.h  GnssDataLoader.h  ImuDataLoader.h  LidarDataLoader.h  RadarTiDataLoader.h  RecordingConstants.h
src/atlas_fusion/include/data_models/: DataModelTypes.h  ErrorDataModel.h  FrameTypes.h  GenericDataModel.h  all.h
src/atlas_fusion/include/data_writers/: ImageWriter.h  Lidar2ImagePlotter.h  YoloDetectionWriter.h
src/atlas_fusion/include/fail_check/: AbstrackFailChecker.h  AbstractFailChecker.h  CameraIrFailChecker.h  CameraRGBFailChecker.h  FailChecker.h  GnssFailChecker.h  ImuFailChecker.h  LidarFailChecker.h  RadarTiFileChacker.h  all.h
src/atlas_fusion/include/local_map/: Frames.h  LocalMap.h  ObjectsAggregator.h  TFTree.h
src/atlas_fusion/include/precompiled_headers/: PCH.h
src/atlas_fusion/include/util/: IdentifierToFrameConversions.h  circularbuffer.h  polyfit.h
src/atlas_fusion/include/visualizers/: CameraVisualizer.h  FrustumVisualizer.h  GnssVisualizer.h  ImuVisualizer.h  LidarVisualizer.h  RadarVisualizer.h  SensorStatusVisualizer.h  TFVisualizer.h  TelemetryVisualizer.h  TextStatusVisualizer.h  Topics.h  TrajectoryVisualizer.h  VisualizationHandler.h  VisualizationStructures.h
src/atlas_fusion/libs/sunset/: sunset.cpp  sunset.h
src/atlas_fusion/src/: Context.cpp  DataCache.cpp  LogService.cpp  MapBuilder.cpp  main.cpp
src/atlas_fusion/src/algorithms/: DepthMap.cpp  DetectionsProcessor.cpp  EnvironmentalModel.cpp  ImuDataProcessor.cpp  Kalman1D.cpp  Kalman3D.cpp  LidarFilter.cpp  Projector.cpp  SelfModel.cpp  SimpleTrajectoryLogger.cpp
src/atlas_fusion/src/data_loader/: AbstractDataLoader.cpp  CameraDataLoader.cpp  DataLoader.cpp  GnssDataLoader.cpp  ImuDataLoader.cpp  LidarDataLoader.cpp  RadarTiDataLoader.cpp
src/atlas_fusion/src/data_writers/: ImageWriter.cpp  Lidar2ImagePlotter.cpp  YoloDetectionWriter.cpp
src/atlas_fusion/src/fail_check/: AbstrackFailChecker.cpp  AbstractFailChecker.cpp  CameraIrFailChecker.cpp  CameraRGBFailChecker.cpp  FailChecker.cpp  GnssFailChecker.cpp  ImuFailChecker.cpp  LidarFailChecker.cpp  RadarTiFileChacker.cpp
src/atlas_fusion/src/local_map/: GenericLocalMap.cpp  LocalMap.cpp  ObjectsAggregator.cpp  TFTree.cpp
src/atlas_fusion/src/util/: IdentifierToFrameConversions.cpp
src/atlas_fusion/src/visualizers/: CameraVisualizer.cpp  FrustumVisualizer.cpp  GnssVisualizer.cpp  ImuVisualizer.cpp  LidarVisualizer.cpp  RadarVisualizer.cpp  SensorStatusVisualizer.cpp  TFVisualizer.cpp  TelemetryVisualizer.cpp  TrajectoryVisualizer.cpp  VisualizationHandler.cpp
src/atlas_fusion/tests/: CMakeLists.txt  data_loader_camera_test.cpp  data_loader_gnss_test.cpp  data_loader_imu_test.cpp  data_loader_lidar_test.cpp  depth_map_test.cpp  kalman_1d_test.cpp  kalman_3d_test.cpp  laser_aggregator_test.cpp  local_pose_test.cpp  point_spherical_test.cpp  pointcloud_aggregation_test.cpp  pointcloud_extrapolation_test.cpp  projector_test.cpp
src/autodrive_local_map/: CMakeLists.txt  Doxyfile  Licence.txt  config.yaml  package.xml  papers
src/autodrive_local_map/include/: ConfigService.h  Context.h  LogService.h  MapBuilder.h  TFTree.h
src/autodrive_local_map/include/algorithms/: DepthMap.h  DetectionsProcessor.h  GenericAlgorithm.h  ImuDataProcessor.h  Kalman1D.h  Kalman3D.h  LidarFilter.h  MovementModel.h  Projector.h  QuadratureFilter.h  SelfModel.h  SimpleTrajectoryLogger.h  tools.h
src/autodrive_local_map/include/data_loader/: AbstractDataLoader.h  CameraDataLoader.h  DataLoader.h  DataLoaderIdentifiers.h  GnssDataLoader.h  ImuDataLoader.h  LidarDataLoader.h  RecordingConstants.h
src/autodrive_local_map/include/data_models/: DataModelTypes.h  ErrorDataModel.h  GenericDataModel.h  all.h
src/autodrive_local_map/include/data_writers/: Lidar2ImagePlotter.h  YoloDetectionWriter.h
src/autodrive_local_map/include/fail_check/: AbstrackFailChecker.h  CameraIrFailChecker.h  CameraRGBFailChecker.h  FailChecker.h  GnssFailChecker.h  ImuFailChecker.h  LidarFailChecker.h  all.h
src/autodrive_local_map/include/local_map/: Frames.h  GenericLocalMap.h  LocalMap.h  ObjectsAggregator.h  TFTree.h
src/autodrive_local_map/include/visualizers/: CameraVisualizer.h  Frames.h  FrustumVisualizer.h  GenericVisializer.h  GnssVisualizer.h  ImuVisualizer.h  LidarVisualizer.h  TFVisualizer.h  TelemetryVisualizer.h  Topics.h  TrajectoryVisualizer.h  VisualizationHandler.h  VisualizationStructures.h
src/autodrive_local_map/src/: Context.cpp  LogService.cpp  MapBuilder.cpp  TFTree.cpp  main.cpp
src/autodrive_local_map/src/algorithms/: DepthMap.cpp  DetectionsProcessor.cpp  GenericAlgorithm.cpp  ImuDataProcessor.cpp  Kalman1D.cpp  Kalman3D.cpp  LidarFilter.cpp  MovementModel.cpp  Projector.cpp  QuadratureFilter.cpp  SelfModel.cpp  SimpleTrajectoryLogger.cpp
src/autodrive_local_map/src/data_loader/: AbstractDataLoader.cpp  CameraDataLoader.cpp  DataLoader.cpp  GnssDataLoader.cpp  ImuDataLoader.cpp  LidarDataLoader.cpp
src/autodrive_local_map/src/data_writers/: Lidar2ImagePlotter.cpp  YoloDetectionWriter.cpp
src/autodrive_local_map/tests/: CMakeLists.txt  data_loader_camera_test.cpp  data_loader_gnss_test.cpp  data_loader_imu_test.cpp  data_loader_lidar_test.cpp  depth_map_test.cpp  generic_test.cpp  kalman_1d_test.cpp  kalman_3d_test.cpp  laser_aggregator_test.cpp  local_pose_test.cpp  pointcloud_aggregation_test.cpp  pointcloud_extrapolation_test.cpp  projector_test.cpp  quadrature_filter_test.cpp
(+200 files in other folders)
