<?xml version="1.0"?>
<package format="2">
  <name>atlas_fusion</name>
  <version>0.0.0</version>
  <description>The atlas_fusion package</description>

  <maintainer email="xligoc01@stud.feec.vutbr.cz">atlas_fusion</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
</package>
